--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/*
-Template: Textica - Textile & Fabric Industry HTML Template
-Author: peacefulqode.com
-Version: 1.0
-Design and Developed by: Peacefulqode
-*/
 
 /*+++++++++++++++++++++++++++++++++++++++++++++++
 [  Table of contents  ]
@@ -67,7 +61,7 @@ Moz Selection
 
 
 :root {
-	--primary-color: #F56800;
+	--primary-color: #ac954f;
 	--dark-color: #272B36;
 	--secondary-color: #666666;
 	--grey-color: #F5F5F5;
